--- a/inv_fifo.ipynb
+++ b/inv_fifo.ipynb
@@ -2,16 +2,497 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['inv_7.csv']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime, date\n",
     "import re\n",
     "import os\n",
-    "os.listdir()"
+    "\n",
+    "\n",
+    "os.listdir('data_down')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dscshap3808\\Miniconda3\\envs\\siming\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3441: DtypeWarning: Columns (4,18,19,20,39) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./data_down/inv_7.csv', sep='\\001')\n",
+    "df.columns = [re.sub('\\w+\\.', '', i) for i in list(df.columns)]\n",
+    "df = df.dropna(how = 'all', axis =1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['wms_company_id', 'wms_company_name', 'wms_warehouse_id',\n",
+       "       'wms_warehouse_name', 'lpn', 'sku_code', 'sku_name', 'sku_desc',\n",
+       "       'product_status', 'batch_number', 'inventory_status', 'location',\n",
+       "       'location_zone', 'location_class', 'location_type', 'location_status',\n",
+       "       'container_id', 'product_group', 'product_type', 'allocated_qty',\n",
+       "       'on_hand_qty', 'in_transit_qty', 'shelf_days', 'recived_date',\n",
+       "       'lock_codes', 'create_date', 'last_modified_date', 'data_source',\n",
+       "       'manufactured_date', 'expiration_date', 'ou_code', 'usage_flag',\n",
+       "       'inc_day', 'src'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_cols = pd.Series(df.columns)[pd.Series(df.columns).str.lower().str.findall('date|time').apply(len)>0]\n",
+    "df[time_cols] = df[time_cols].apply(lambda x: x.str.slice(0,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "recived_date             139\n",
+       "create_date              139\n",
+       "last_modified_date         0\n",
+       "manufactured_date     481935\n",
+       "expiration_date        10040\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[time_cols].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wms_company_id</th>\n",
+       "      <th>wms_company_name</th>\n",
+       "      <th>wms_warehouse_id</th>\n",
+       "      <th>wms_warehouse_name</th>\n",
+       "      <th>lpn</th>\n",
+       "      <th>sku_code</th>\n",
+       "      <th>sku_name</th>\n",
+       "      <th>sku_desc</th>\n",
+       "      <th>product_status</th>\n",
+       "      <th>batch_number</th>\n",
+       "      <th>...</th>\n",
+       "      <th>lock_codes</th>\n",
+       "      <th>create_date</th>\n",
+       "      <th>last_modified_date</th>\n",
+       "      <th>data_source</th>\n",
+       "      <th>manufactured_date</th>\n",
+       "      <th>expiration_date</th>\n",
+       "      <th>ou_code</th>\n",
+       "      <th>usage_flag</th>\n",
+       "      <th>inc_day</th>\n",
+       "      <th>src</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>451092_101</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ONHAND_ES-1HB</td>\n",
+       "      <td>2124N0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ONHAND_ES-1HB</td>\n",
+       "      <td>2021-09-06</td>\n",
+       "      <td>2021-09-25</td>\n",
+       "      <td>scale_michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-06-12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211027</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>528570_101</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ONHAND_ES-1HB</td>\n",
+       "      <td>2112N0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ONHAND_ES-1HB</td>\n",
+       "      <td>2021-09-17</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>scale_michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-03-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211027</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>528570_101</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ONHAND_ES-1HB</td>\n",
+       "      <td>2111N0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ONHAND_ES-1HB</td>\n",
+       "      <td>2021-09-15</td>\n",
+       "      <td>2021-10-03</td>\n",
+       "      <td>scale_michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-03-13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211027</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>406040_112</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ONHAND_US-1BF</td>\n",
+       "      <td>2101N0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ONHAND_US-1BF</td>\n",
+       "      <td>2021-09-27</td>\n",
+       "      <td>2021-09-27</td>\n",
+       "      <td>scale_michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211027</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>Michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>745434_104</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ONHAND_CN-17V</td>\n",
+       "      <td>2029N0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ONHAND_CN-17V</td>\n",
+       "      <td>2021-10-09</td>\n",
+       "      <td>2021-10-09</td>\n",
+       "      <td>scale_michelin</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-07-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211027</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492830</th>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>118162</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>210105070831</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>2021-01-06</td>\n",
+       "      <td>2021-01-08</td>\n",
+       "      <td>scale_fas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4712-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211103</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492831</th>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150085</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>201009101951</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>2020-10-10</td>\n",
+       "      <td>2021-01-07</td>\n",
+       "      <td>scale_fas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4712-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211103</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492832</th>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>64103</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>201226005700</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>2020-12-28</td>\n",
+       "      <td>2021-01-08</td>\n",
+       "      <td>scale_fas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4712-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211103</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492833</th>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>149875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>201226002536</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>2020-12-29</td>\n",
+       "      <td>2021-01-08</td>\n",
+       "      <td>scale_fas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4712-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211103</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492834</th>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>Solvay-SHANGHAI</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>FAS</td>\n",
+       "      <td>332073</td>\n",
+       "      <td>199721</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>201119082238</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Bonded Normal</td>\n",
+       "      <td>2020-11-20</td>\n",
+       "      <td>2021-01-06</td>\n",
+       "      <td>scale_fas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4712-12-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20211103</td>\n",
+       "      <td>scale</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33899 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         wms_company_id wms_company_name wms_warehouse_id wms_warehouse_name  \\\n",
+       "0              Michelin         Michelin              NaN                NaN   \n",
+       "1              Michelin         Michelin              NaN                NaN   \n",
+       "2              Michelin         Michelin              NaN                NaN   \n",
+       "3              Michelin         Michelin              NaN                NaN   \n",
+       "4              Michelin         Michelin              NaN                NaN   \n",
+       "...                 ...              ...              ...                ...   \n",
+       "492830  Solvay-SHANGHAI  Solvay-SHANGHAI              FAS                FAS   \n",
+       "492831  Solvay-SHANGHAI  Solvay-SHANGHAI              FAS                FAS   \n",
+       "492832  Solvay-SHANGHAI  Solvay-SHANGHAI              FAS                FAS   \n",
+       "492833  Solvay-SHANGHAI  Solvay-SHANGHAI              FAS                FAS   \n",
+       "492834  Solvay-SHANGHAI  Solvay-SHANGHAI              FAS                FAS   \n",
+       "\n",
+       "           lpn    sku_code sku_name sku_desc product_status  batch_number  \\\n",
+       "0          NaN  451092_101      NaN      NaN  ONHAND_ES-1HB        2124N0   \n",
+       "1          NaN  528570_101      NaN      NaN  ONHAND_ES-1HB        2112N0   \n",
+       "2          NaN  528570_101      NaN      NaN  ONHAND_ES-1HB        2111N0   \n",
+       "3          NaN  406040_112      NaN      NaN  ONHAND_US-1BF        2101N0   \n",
+       "4          NaN  745434_104      NaN      NaN  ONHAND_CN-17V        2029N0   \n",
+       "...        ...         ...      ...      ...            ...           ...   \n",
+       "492830     NaN      118162      NaN      NaN  Bonded Normal  210105070831   \n",
+       "492831     NaN      150085      NaN      NaN  Bonded Normal  201009101951   \n",
+       "492832     NaN       64103      NaN      NaN  Bonded Normal  201226005700   \n",
+       "492833     NaN      149875      NaN      NaN  Bonded Normal  201226002536   \n",
+       "492834  332073      199721      NaN      NaN  Bonded Normal  201119082238   \n",
+       "\n",
+       "        ...     lock_codes create_date last_modified_date     data_source  \\\n",
+       "0       ...  ONHAND_ES-1HB  2021-09-06         2021-09-25  scale_michelin   \n",
+       "1       ...  ONHAND_ES-1HB  2021-09-17         2021-10-03  scale_michelin   \n",
+       "2       ...  ONHAND_ES-1HB  2021-09-15         2021-10-03  scale_michelin   \n",
+       "3       ...  ONHAND_US-1BF  2021-09-27         2021-09-27  scale_michelin   \n",
+       "4       ...  ONHAND_CN-17V  2021-10-09         2021-10-09  scale_michelin   \n",
+       "...     ...            ...         ...                ...             ...   \n",
+       "492830  ...  Bonded Normal  2021-01-06         2021-01-08       scale_fas   \n",
+       "492831  ...  Bonded Normal  2020-10-10         2021-01-07       scale_fas   \n",
+       "492832  ...  Bonded Normal  2020-12-28         2021-01-08       scale_fas   \n",
+       "492833  ...  Bonded Normal  2020-12-29         2021-01-08       scale_fas   \n",
+       "492834  ...  Bonded Normal  2020-11-20         2021-01-06       scale_fas   \n",
+       "\n",
+       "       manufactured_date expiration_date ou_code usage_flag   inc_day    src  \n",
+       "0                    NaN      2024-06-12     NaN          1  20211027  scale  \n",
+       "1                    NaN      2024-03-20     NaN          1  20211027  scale  \n",
+       "2                    NaN      2024-03-13     NaN          1  20211027  scale  \n",
+       "3                    NaN      2024-01-03     NaN          1  20211027  scale  \n",
+       "4                    NaN      2023-07-20     NaN          1  20211027  scale  \n",
+       "...                  ...             ...     ...        ...       ...    ...  \n",
+       "492830               NaN      4712-12-31     NaN          1  20211103  scale  \n",
+       "492831               NaN      4712-12-31     NaN          1  20211103  scale  \n",
+       "492832               NaN      4712-12-31     NaN          1  20211103  scale  \n",
+       "492833               NaN      4712-12-31     NaN          1  20211103  scale  \n",
+       "492834               NaN      4712-12-31     NaN          1  20211103  scale  \n",
+       "\n",
+       "[33899 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['ou_code'].isna()]"
    ]
   }
  ],
@@ -25,7 +506,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
   "orig_nbformat": 4
