--- a/inv_fifo.ipynb
+++ b/inv_fifo.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "-- select * from  dsc_dwd.dwd_wh_dsc_inventory_dtl_di \n",
-    "-- where src = 'scale'\n",
-    "-- and data_source in ('scale_hpi', 'scale_michelin', 'scale_fas', 'scale_bose')\n",
-    "-- and inc_day in ('20211124', '20211117', '20211110', '20211103', \n",
-    "-- '20211027', '20211020', '20211013','20211006')\n",
-    "-- and usage_flag = '1'"
+    "# -- select * from  dsc_dwd.dwd_wh_dsc_inventory_dtl_di \n",
+    "# -- where src = 'scale'\n",
+    "# -- and data_source in ('scale_hpi', 'scale_michelin', 'scale_fas', 'scale_bose')\n",
+    "# -- and inc_day in ('20211124', '20211117', '20211110', '20211103', \n",
+    "# -- '20211027', '20211020', '20211013','20211006')\n",
+    "# -- and usage_flag = '1'"
    ]
   },
   {
