--- a/inv_fifo.ipynb
+++ b/inv_fifo.ipynb
@@ -2146,7 +2146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "select * from  dsc_dwd.dwd_wh_dsc_inventory_dtl_di \n",
+    "**select * from  dsc_dwd.dwd_wh_dsc_inventory_dtl_di \n",
     "where src = 'scale'\n",
     "and  ou_code in(\n",
     "'FERRECDXXS',\n",
@@ -2158,7 +2158,7 @@
     ")\n",
     "and inc_day in ('20211124', '20211117', '20211110', '20211103', \n",
     "'20211027', '20211020', '20211013','20211006')\n",
-    "and usage_flag = '1'"
+    "and usage_flag = '1'**"
    ]
   },
   {
