--- a/inv_fifo.ipynb
+++ b/inv_fifo.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,28 +150,42 @@
     "    global code\n",
     "    df = df9\n",
     "    df = df[df['ou_code'].astype(str) == ou_code]\n",
+    "\n",
+    "    def fifo_fefo(df, type):\n",
+    "        if type == 'fifo':\n",
+    "            df['recived_date'] = pd.to_datetime(df['recived_date'])\n",
+    "            df['fifo_fefo'] = 'fifo'\n",
+    "        elif type == 'fefo':\n",
+    "            df['recived_date'] = pd.to_datetime(df['expiration_date'])\n",
+    "            df['fifo_fefo'] = 'fefo'\n",
+    "        else: \n",
+    "            pass\n",
+    "        return df \n",
+    "\n",
     "    if ou_code == 'HPPXXWHWDS':\n",
     "        # hp wh\n",
     "        code = '(QH|27|QI)'\n",
-    "        df['recived_date'] = pd.to_datetime(df['recived_date'])\n",
-    "        df['fifo_fefo'] = 'fifo'\n",
+    "        df = fifo_fefo(df, 'fifo')\n",
     "\n",
     "    elif ou_code == 'MICHETCTGS':\n",
-    "        # mich tc, rt,m \n",
-    "        df ['recived_date'] =  pd.to_datetime(df['expiration_date'])\n",
-    "        df['fifo_fefo'] = 'fefo'\n",
+    "        # mich tc, rt,m  FEFO\n",
+    "        df = fifo_fefo(df, 'fefo')\n",
     "\n",
     "    elif ou_code == 'COSTASHHTS':\n",
-    "        df[df['']] != ''\n",
-    "        df[df['expiration_date'] != '4712-12-31 00:00:00']\n",
+    "        # COSTASHHTS expiration_date 没有空值.\n",
+    "        df1 = df[df['expiration_date'] == '4712-12-31 00:00:00'] # fifo\n",
+    "        df2 = df[df['expiration_date'] != '4712-12-31 00:00:00'] # fefo\n",
+    "        df1 = fifo_fefo(df1, 'fifo')\n",
+    "        df2 = fifo_fefo(df2, 'fefo')\n",
+    "        df = pd.concat([df1, df2], axis = 0)\n",
     "\n",
     "    elif ou_code == 'SIEMESUEPS':\n",
-    "        df 筛选.\n",
+    "        pass\n",
     "    \n",
     "    \n",
     "    df = df[['wms_company_name', 'wms_warehouse_id','sku_code', 'sku_name', 'sku_desc', 'location',\\\n",
     "        'lock_codes', 'on_hand_qty', 'in_transit_qty','allocated_qty', 'shelf_days', \n",
-    "        'recived_date','usage_flag', 'inc_day']]\n",
+    "        'recived_date','usage_flag', 'fifo_fefo','inc_day']]\n",
     "    # qty = pd.Series(df.columns).str.extract('(.+qty)').dropna(axis = 0)\n",
     "    # df['qty'] = df[qty[0]].sum(axis = 1).round(2)\n",
     "    df['qty'] = df['on_hand_qty']\n",
@@ -203,7 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,21 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|\u001b[32m██████████\u001b[0m| 280/280 [00:05<00:00, 50.09it/s]\n"
+      "100%|\u001b[32m██████████\u001b[0m| 280/280 [00:07<00:00, 36.17it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.8 s\n"
+      "Wall time: 8.02 s\n"
      ]
     }
    ],
@@ -273,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,9 +346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1002-34' '1001-34' '1004-34' '1004-27' '1007-QH' '1008-34']\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def output(df_err, df0):\n",
@@ -368,301 +397,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1002-34', '1001-34', '1007-QH', '1004-27', '1008-34', '1004-34'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# pd.DataFrame(\n",
     "#         view.groupby('sku')['mark'].apply(list).astype(str).str.contains('may') # may lock?\n",
-    "#         ).reset_index()"
+    "#         ).reset_index()\n",
+    "\n",
+    "bose_inv['lock_codes'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1002-34' '1001-34' '1004-34' '1004-27' '1007-QH' '1008-34']\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>20211006</th>\n",
-       "      <th>20211013</th>\n",
-       "      <th>20211020</th>\n",
-       "      <th>20211027</th>\n",
-       "      <th>20211103</th>\n",
-       "      <th>20211110</th>\n",
-       "      <th>20211117</th>\n",
-       "      <th>20211124</th>\n",
-       "      <th>received_date</th>\n",
-       "      <th>sku</th>\n",
-       "      <th>mark</th>\n",
-       "      <th>lock_codes</th>\n",
-       "      <th>wms_warehouse_id</th>\n",
-       "      <th>location</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>377</th>\n",
-       "      <td>20.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2021-09-08</td>\n",
-       "      <td>5RC89A#AB2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1002-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{A-07-23-1, A-07-20-1, A-07-25-1, A-07-21-1, A...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>378</th>\n",
-       "      <td>21.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2021-09-22</td>\n",
-       "      <td>5RC89A#AB2</td>\n",
-       "      <td>clear</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{C-10-20-1, C-10-21-1, C-10-16-1, C-10-17-1, C...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>379</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2021-10-18</td>\n",
-       "      <td>5RC89A#AB2</td>\n",
-       "      <td>clear</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{C-04-05-1, C-07-08-1, C-07-12-1, B-05-02-1, C...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>380</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2021-11-15</td>\n",
-       "      <td>5RC89A#AB2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{C-08-02-1, C-08-05-1, C-07-08-1, C-08-08-1, C...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>442</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2021-09-10</td>\n",
-       "      <td>8GS43A#AB2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1002-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{C-03-18-1, C-03-19-1, C-03-16-1, C-03-17-1}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1684</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2021-09-29</td>\n",
-       "      <td>Z7Y79A</td>\n",
-       "      <td>clear</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{A-07-18-1}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1699</th>\n",
-       "      <td>36.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2021-08-31</td>\n",
-       "      <td>Z9M07A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{A-10-51-2}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1700</th>\n",
-       "      <td>36.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2021-08-31</td>\n",
-       "      <td>Z9M07A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1002-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{A-10-51-2}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1701</th>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2021-09-27</td>\n",
-       "      <td>Z9M07A</td>\n",
-       "      <td>clear</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{C-07-41-2}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1702</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>2021-10-25</td>\n",
-       "      <td>Z9M07A</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>{A-11-47-2, A-11-46-2, A-11-48-2}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>316 rows × 14 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      20211006  20211013  20211020  20211027  20211103  20211110  20211117  \\\n",
-       "377       20.0      19.0      19.0      17.0      17.0       9.0       8.0   \n",
-       "378       21.0      21.0      21.0       0.0       0.0       0.0       0.0   \n",
-       "379        0.0       0.0      90.0      81.0      81.0      10.0       8.0   \n",
-       "380        0.0       0.0       0.0       0.0       0.0       0.0      50.0   \n",
-       "442       16.0      16.0      16.0      16.0      13.0      12.0      10.0   \n",
-       "...        ...       ...       ...       ...       ...       ...       ...   \n",
-       "1684      10.0      10.0       4.0       4.0       4.0       4.0       4.0   \n",
-       "1699      36.0      18.0       6.0       6.0       6.0       6.0       6.0   \n",
-       "1700      36.0      18.0       6.0       6.0       6.0       6.0       6.0   \n",
-       "1701      36.0      36.0       0.0       0.0       0.0       0.0       0.0   \n",
-       "1702       0.0       0.0       0.0      96.0      96.0      96.0      51.0   \n",
-       "\n",
-       "      20211124 received_date         sku   mark lock_codes wms_warehouse_id  \\\n",
-       "377        8.0    2021-09-08  5RC89A#AB2      0    1002-34           HPI_WH   \n",
-       "378        0.0    2021-09-22  5RC89A#AB2  clear    1001-34           HPI_WH   \n",
-       "379        0.0    2021-10-18  5RC89A#AB2  clear    1001-34           HPI_WH   \n",
-       "380        8.0    2021-11-15  5RC89A#AB2      0    1001-34           HPI_WH   \n",
-       "442        6.0    2021-09-10  8GS43A#AB2      0    1002-34           HPI_WH   \n",
-       "...        ...           ...         ...    ...        ...              ...   \n",
-       "1684       0.0    2021-09-29      Z7Y79A  clear    1001-34           HPI_WH   \n",
-       "1699       6.0    2021-08-31      Z9M07A      0    1001-34           HPI_WH   \n",
-       "1700       6.0    2021-08-31      Z9M07A      0    1002-34           HPI_WH   \n",
-       "1701       0.0    2021-09-27      Z9M07A  clear    1001-34           HPI_WH   \n",
-       "1702      51.0    2021-10-25      Z9M07A      0    1001-34           HPI_WH   \n",
-       "\n",
-       "                                               location  \n",
-       "377   {A-07-23-1, A-07-20-1, A-07-25-1, A-07-21-1, A...  \n",
-       "378   {C-10-20-1, C-10-21-1, C-10-16-1, C-10-17-1, C...  \n",
-       "379   {C-04-05-1, C-07-08-1, C-07-12-1, B-05-02-1, C...  \n",
-       "380   {C-08-02-1, C-08-05-1, C-07-08-1, C-08-08-1, C...  \n",
-       "442        {C-03-18-1, C-03-19-1, C-03-16-1, C-03-17-1}  \n",
-       "...                                                 ...  \n",
-       "1684                                        {A-07-18-1}  \n",
-       "1699                                        {A-10-51-2}  \n",
-       "1700                                        {A-10-51-2}  \n",
-       "1701                                        {C-07-41-2}  \n",
-       "1702                  {A-11-47-2, A-11-46-2, A-11-48-2}  \n",
-       "\n",
-       "[316 rows x 14 columns]"
+       "array(['1002-34', '1001-34', '1008-34', '1004-34'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,9 +440,9 @@
     "\n",
     "# 1000全新 3000退货 4000破损产品-\n",
     "\n",
-    "bose_err_list = ou_level_lock_codes('(4000|3000)')\n",
+    "bose_err_list = ou_level_lock_codes('(QH|QI|27)')\n",
     "bose_definite_wrong = check(bose_err_list, df0)\n",
-    "bose_definite_wrong\\\n",
+    "bose_definite_wrong['lock_codes'].unique()\n",
     "    # .to_csv('./data_up/bose_fifo.csv', index = None, encoding = 'utf_8_sig')"
    ]
   },
